--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # DB_URL=mongodb+srv://nerd:nerd@cluster0.fn9ul.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 DB_URL=mongodb+srv://roeman:roeman@cluster0.nxiaxib.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=rental@App!secrekekey
 DB_NAME=rental_app
